Bug 165062 - Changing width of window when using Groupedbar Compact + kf5/kf6 causes minor painting glitch
Summary: Changing width of window when using Groupedbar Compact + kf5/kf6 causes minor...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5 Qt6
  Show dependency treegraph
 
Reported: 2025-02-05 16:03 UTC by Buovjaga
Modified: 2025-02-08 18:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of glitch (4.30 KB, image/png)
2025-02-05 16:03 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2025-02-05 16:03:02 UTC
Created attachment 199001 [details]
Screenshot of glitch

Use a Qt-based UI.

1. For example, in Writer, View - User Interface - Groupedbar Compact
2. Resize the width to very narrow and back

The Menu section repaints in a glitchy way.

Bibisected with linux-64-7.4 to 9ea767cb568cef1b142190d2adb0e301baa382e2
tdf#132350 Qt implement SalMenu button interface
Comment 1 Michael Weghorn 2025-02-05 21:23:49 UTC
I can reproduce.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4906f11d8f0c85248464b10c0b6c9c02e1657bad
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 2 Michael Weghorn 2025-02-08 13:21:52 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/181292
Comment 3 Commit Notification 2025-02-08 17:00:49 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b20d0f9b3797f6e1e33076d386608fa5eecd1106

tdf#165062 qt: Make only floating window/popup widget bg translucent

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2025-02-08 18:37:50 UTC
Verified, thanks

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 36b4609461d9daa7cfd9b00689f64d31717e5044
CPU threads: 8; OS: Linux 6.13; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded